--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Recruits Micro-Site</title>
 
   <script src="vendors/jquery-3.1.1.min.js"></script>
   <link rel="stylesheet" href="vendors/semantic.min.css">
@@ -85,7 +85,7 @@
         </div>
         <div class="fluid card">
           <div class="image">
-            <img src="imgs/bman.jpg">
+            <img src="imgs/nuno.jpg">
           </div>
           <div class="content">
             <div class="header">Nuno Fahla</div>
