--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <div class="ui four column grid cards">
         <div class="fluid card">
           <div class="image">
-            <img src="imgs/bman.jpg">
+            <img src="imgs/afonso.jpg">
           </div>
           <div class="content">
             <div class="header">Afonso Campos</div>
@@ -74,7 +74,7 @@
         </div>
         <div class="fluid card">
           <div class="image">
-            <img src="imgs/bman.jpg">
+            <img src="imgs/pedro.png">
           </div>
           <div class="content">
             <div class="header">Pedro Duarte</div>
@@ -96,7 +96,7 @@
         </div>
         <div class="fluid card">
           <div class="image">
-            <img src="imgs/bman.jpg">
+            <img src="imgs/sophie.jpg">
           </div>
           <div class="content">
             <div class="header">Sophie Pousinho</div>
@@ -112,12 +112,16 @@
       <h1>Documentos</h1>
       <table class="ui celled table">
         <thead>
-          <tr><th>Documento</th>
-          <th>Download</th>
-        </tr></thead>
+          <tr>
+            <th>Documento</th>
+            <th>Última Atualização</th>
+            <th>Download</th>
+          </tr>
+        </thead>
         <tbody>
           <tr>
-            <td data-label="Documento">Teste</td>
+            <td data-label="Documento"></td>
+            <td data-label="Última Atualização"></td>
             <td data-label="Download"><a href="" target="_blank">Download</a></td>
           </tr>
         </tbody>
