--- a/index.html
+++ b/index.html
@@ -62,9 +62,7 @@
       <h1>Equipa</h1>
       <div class="ui four column grid cards">
         <div class="fluid card">
-          <div class="image">
-            <img src="imgs/afonso.jpg">
-          </div>
+          <div class="image" style="background-image: url(imgs/afonso.jpg)"></div>
           <div class="content">
             <div class="header">Afonso Campos</div>
             <div class="meta">
@@ -73,8 +71,7 @@
           </div>
         </div>
         <div class="fluid card">
-          <div class="image">
-            <img src="imgs/pedro.png">
+          <div class="image" style="background-image: url(imgs/pedro.png)">
           </div>
           <div class="content">
             <div class="header">Pedro Duarte</div>
@@ -84,8 +81,7 @@
           </div>
         </div>
         <div class="fluid card">
-          <div class="image">
-            <img src="imgs/nuno.jpg">
+          <div class="image" style="background-image: url(imgs/nuno.jpg)">
           </div>
           <div class="content">
             <div class="header">Nuno Fahla</div>
@@ -95,8 +91,7 @@
           </div>
         </div>
         <div class="fluid card">
-          <div class="image">
-            <img src="imgs/sophie.jpg">
+          <div class="image" style="background-image: url(imgs/sophie.jpg)">
           </div>
           <div class="content">
             <div class="header">Sophie Pousinho</div>
