--- a/index.html
+++ b/index.html
@@ -6,14 +6,21 @@
   <title>Recruits Micro-Site</title>
 
   <script src="vendors/jquery-3.1.1.min.js"></script>
+
+  <!-- Semantic UI -->
   <link rel="stylesheet" href="vendors/semantic.min.css">
   <script src="vendors/semantic.min.js"></script>
+
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/solid.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/solid.min.js"></script>
 
   <link rel="stylesheet" href="css/style.css">
   <script src="js/main.js"></script>
 </head>
 <body>
   <div class="ui left fixed vertical inverted menu">
+    <div class="openclose"><span class="fas fa-bars fa-10x"></span></div>
     <div class="item">
       <img class="ui small image" src="imgs/logo.png">
     </div>
