--- a/index.html
+++ b/index.html
@@ -12,24 +12,24 @@
   <script src="vendors/semantic.min.js"></script>
 
   <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/solid.min.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/solid.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"></script>
 
   <link rel="stylesheet" href="css/style.css">
   <script src="js/main.js"></script>
 </head>
 <body>
   <div class="ui left fixed vertical inverted menu">
-    <div class="openclose"><span class="fas fa-bars fa-10x"></span></div>
     <div class="item">
       <img class="ui small image" src="imgs/logo.png">
+      <span class="openclose"><i class="openclose fas fa-bars fa-10x"></i></span>
     </div>
     <a class="item" href="#projeto">Projeto</a>
     <a class="item" href="#equipa">Equipa</a>
     <a class="item" href="#docs">Documentos</a>
   </div>
 
-  <div id="page">
+  <div id="page" class="full">
     <div id="top">
       <div class="content">
         <div>
