--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"></script>
 
+  <!-- Custom Slider -->
+  <link rel="stylesheet" href="css/slider.css">
+  <script src="js/slider.js"></script>
+
   <link rel="stylesheet" href="css/style.css">
   <script src="js/main.js"></script>
 </head>
@@ -45,22 +49,27 @@
     
     <div id="projeto">
       <h1>Projeto</h1>
-      <div class="ui items">
-        <div class="item">
-          <div class="content">
-            <a class="header">Header</a>
-            <div class="description">
-              <p>Description</p>
-            </div>
+      <div class="feature">
+        <h3 class="header">Empreendedores</h3>
+        <div class="slider">
+          <span class="control left"><i class="fas fa-angle-left"></i></span>
+          <div class="items">
+            <p>Procure e recrute os colaboradores ideais que o ajudem a dar vida ao seu projeto!</p>
+            <p>Organize e comunique com a sua equipa de forma a alcançar a sua visão para o projeto!</p>
           </div>
+          <span class="control right"><i class="fas fa-angle-right"></i></span>
         </div>
-        <div class="item">
-          <div class="content">
-            <a class="header">Header</a>
-            <div class="description">
-              <p>Description</p>
-            </div>
+      </div>
+
+      <div class="feature">
+        <h3 class="header">Trabalhadores</h3>
+        <div class="slider">
+          <span class="control left"><i class="fas fa-angle-left"></i></span>
+          <div class="items">
+            <p>Encontre o projeto ideal para si: escolha um dos imensos projetos disponíveis para participar já hoje.</p>
+            <p>Ganhe experiência e enriqueça o seu currículo participando nos inúmeros projetos que temos para lhe oferecer!</p>
           </div>
+          <span class="control right"><i class="fas fa-angle-right"></i></span>
         </div>
       </div>
     </div>
