--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       <div class="content">
         <div>
           <div><img class="large" src="imgs/logo.png" alt=""></div>
+          <p>Torne os seus projetos realidade.</p>
           <a href="#docs">
             <button class="fluid large ui secondary button">
               Ver Documentos Disponíveis
