--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           </div>
         </div>
         <div class="fluid card">
-          <div class="image" style="background-image: url(imgs/sophie.jpg)">
+          <div class="image" style="background-image: url(imgs/sophie.jpg); background-position: center top;">
           </div>
           <div class="content">
             <div class="header">Sophie Pousinho</div>
