--- a/index.html
+++ b/index.html
@@ -50,29 +50,31 @@
     
     <div id="projeto">
       <h1>Projeto</h1>
-      <div class="feature">
-        <h3 class="header">Empreendedores</h3>
-        <div class="slider">
-          <span class="control left"><i class="fas fa-angle-left"></i></span>
-          <div class="items">
-            <p>Procure e recrute os colaboradores ideais que o ajudem a dar vida ao seu projeto!</p>
-            <p>Organize e comunique com a sua equipa de forma a alcançar a sua visão para o projeto!</p>
+      <span class="features">
+        <div class="feature">
+          <h3 class="header">Empreendedores</h3>
+          <div class="slider">
+            <span class="control left"><i class="fas fa-angle-left"></i></span>
+            <div class="items">
+              <p>Procure e recrute os colaboradores ideais que o ajudem a dar vida ao seu projeto!</p>
+              <p>Organize e comunique com a sua equipa de forma a alcançar a sua visão para o projeto!</p>
+            </div>
+            <span class="control right"><i class="fas fa-angle-right"></i></span>
           </div>
-          <span class="control right"><i class="fas fa-angle-right"></i></span>
         </div>
-      </div>
-
-      <div class="feature">
-        <h3 class="header">Trabalhadores</h3>
-        <div class="slider">
-          <span class="control left"><i class="fas fa-angle-left"></i></span>
-          <div class="items">
-            <p>Encontre o projeto ideal para si: escolha um dos imensos projetos disponíveis para participar já hoje.</p>
-            <p>Ganhe experiência e enriqueça o seu currículo participando nos inúmeros projetos que temos para lhe oferecer!</p>
+  
+        <div class="feature">
+          <h3 class="header">Trabalhadores</h3>
+          <div class="slider">
+            <span class="control left"><i class="fas fa-angle-left"></i></span>
+            <div class="items">
+              <p>Encontre o projeto ideal para si: escolha um dos imensos projetos disponíveis para participar já hoje.</p>
+              <p>Ganhe experiência e enriqueça o seu currículo participando nos inúmeros projetos que temos para lhe oferecer!</p>
+            </div>
+            <span class="control right"><i class="fas fa-angle-right"></i></span>
           </div>
-          <span class="control right"><i class="fas fa-angle-right"></i></span>
         </div>
-      </div>
+      </span>
     </div>
 
     <div id="equipa">
