--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
               <a>G104 - 100055</a>
             </div>
           </div>
+          <div class="extra content">
+            <p>afonso.campos@ua.pt</p>
+          </div>
         </div>
         <div class="fluid card">
           <div class="image" style="background-image: url(imgs/pedro.png)">
@@ -95,8 +98,11 @@
           <div class="content">
             <div class="header">Pedro Duarte</div>
             <div class="meta">
-              <a>G104 - 97673</a>
+              <a>G104 - 97673</a><br>
             </div>
+          </div>
+          <div class="extra content">
+            <p>pedro.dld@ua.pt</p>
           </div>
         </div>
         <div class="fluid card">
@@ -108,6 +114,9 @@
               <a>G104 - 97631</a>
             </div>
           </div>
+          <div class="extra content">
+            <p>maildonuno@ua.pt</p>
+          </div>
         </div>
         <div class="fluid card">
           <div class="image" style="background-image: url(imgs/sophie.jpg); background-position: center top;">
@@ -117,6 +126,9 @@
             <div class="meta">
               <a>G104 - 97814</a>
             </div>
+          </div>
+          <div class="extra content">
+            <p>sophiepousinho@ua.pt</p>
           </div>
         </div>
       </div>
