--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
       <span class="openclose"><i class="openclose fas fa-bars fa-10x"></i></span>
     </div>
     <a class="item" href="#projeto">Projeto</a>
-    <a class="item" href="#equipa">Equipa</a>
     <a class="item" href="#docs">Documentos</a>
+    <a class="item" href="#equipa">Equipa</a>
   </div>
 
   <div id="page" class="full">
@@ -78,6 +78,26 @@
       </span>
     </div>
 
+    <div id="docs">
+      <h1>Documentos</h1>
+      <table class="ui celled table">
+        <thead>
+          <tr>
+            <th>Documento</th>
+            <th>Última Atualização</th>
+            <th>Download</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td data-label="Documento"></td>
+            <td data-label="Última Atualização"></td>
+            <td data-label="Download"><a href="" target="_blank">Download</a></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
     <div id="equipa">
       <h1>Equipa</h1>
       <div class="ui four column grid cards">
@@ -116,7 +136,7 @@
             </div>
           </div>
           <div class="extra content">
-            <p>maildonuno@ua.pt</p>
+            <p>nunofahla@ua.pt</p>
           </div>
         </div>
         <div class="fluid card">
@@ -133,26 +153,6 @@
           </div>
         </div>
       </div>
-    </div>
-
-    <div id="docs">
-      <h1>Documentos</h1>
-      <table class="ui celled table">
-        <thead>
-          <tr>
-            <th>Documento</th>
-            <th>Última Atualização</th>
-            <th>Download</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td data-label="Documento"></td>
-            <td data-label="Última Atualização"></td>
-            <td data-label="Download"><a href="" target="_blank">Download</a></td>
-          </tr>
-        </tbody>
-      </table>
     </div>
   </div>
 </body>
